<resources>
    <string name="app_name">NetSecuirity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="opredel">Определение и описание</string>
    <string name="raspr">Распростаненные угрозы</string>
    <string name="how">Как защитить личные данные</string>
    <string name="setev">Сетевая безопасность</string>
    <string name="mobil">Безопасность мобильных устройств</string>
    <string name="tips">Советы по безопасности</string>
    <string name="windows_10">Учётная запись ребёнка</string>
    <string name="parent_control">Родительский контроль</string>
    <string name="mobile">Мобильная безопасность</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nope">Что нельзя публиковать в сети</string>
</resources>